envoy-headers-body-transformation/lua-filter/k8s/envoy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000

node:
  cluster: service_greeter
  id: test-id

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080      
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/lua"
                route:
                  timeout: 100000s
                  cluster: backend_1
              - match:
                  prefix: "/without"
                route:
                  timeout: 100000s
                  cluster: backend_2
                typed_per_filter_config:
                  envoy.filters.http.lua:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                    disabled: true
            internal_only_headers:
            - isadmin                  
          http_filters:
          - name: envoy.filters.http.lua1
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  request_handle:logInfo("Hello Hello Renuka LUA1")
                  local headers, body = request_handle:httpCall(
                    "ext_bal_service",
                    {
                      [":method"] = "GET",
                      [":path"] = "/greeting",
                      [":authority"] = "ext_bal_service"
                    },
                    "hello world  2",
                    100000,
                    false
                  )
                  request_handle:logInfo("LUA1: Done HTTP call")
                  request_handle:logInfo("LUA1 Headers HTTP call: " .. headers["content-length"])
                  request_handle:logInfo("LUA1 Body HTTP call: " .. body)
                end
          - name: envoy.filters.http.router


  clusters:
  - name: ext_bal_service
    connect_timeout: 200s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ext_bal_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ext-bal-service
                port_value: 9090
  - name: backend_1
    connect_timeout: 200s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-1
                port_value: 8688
  - name: backend_2
    connect_timeout: 200s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-2
                port_value: 8688
