envoy-headers-body-transformation/lua-filter/k8s/envoy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    choreo.component: enovyproxy
  name: enovyproxy
spec:
  type: LoadBalancer
  ports:
  - name: proxy-http-port
    port: 80
    protocol: TCP
    targetPort: http-port
    nodePort: 30007
  selector:
    choreo.component: enovyproxy
